fix: spacing adjustments

--- a/src/app/casino/gameview/gameview.component.css
+++ b/src/app/casino/gameview/gameview.component.css
@@ -368,13 +368,14 @@ iframe{
     }
 
     .game-view-mobile {
-        width: 100%;
+        width: calc(100% - 20px);
         height: 100%;
     }
 
     .header-game-view.in-game {
         position: fixed;
         top: 0;
+        left: 0;
         width: 100%;
     }
 
