--- a/src/app/casino/wrapper/wrapper.component.css
+++ b/src/app/casino/wrapper/wrapper.component.css
@@ -13,7 +13,7 @@
 
 @media only screen and (max-width: 1024px) {
     .casino-content {
-        height: calc(100vh - 101px);
+        height: 100vh;
         padding: 0;
     }
 
